Fixed a few errors, and updated of the output.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@393 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -2,6 +2,8 @@
 \emph{Texas Tech University, USA}\\
 \noindent\href{mailto:ece.akilli@cern.ch}{Ece Akilli} 
 \emph{Universit\'e de Gen\`eve, D\'epartement de Physique Nucl\'eaire et Corpusculaire, Switzerland}\\
+\noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz Maestre} 
+\emph{Centro de Investigaciones Energ\'eticas Medioambientales y Tecnol\'ogicas (CIEMAT), Spain}\\
 \noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
@@ -16,6 +18,8 @@
 \emph{Department of Physics, University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:swagato.banerjee@cern.ch}{Swagato Banerjee} 
 \emph{University of Wisconsin-Madison, USA}\\
+\noindent\href{mailto:j.beacham@cern.ch}{James Beacham} 
+\emph{Ohio State University, USA}\\
 \noindent\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia (editor)} 
@@ -36,6 +40,8 @@
 \emph{Santa Cruz Institute for Particle Physics, Department of Physics and Department of Astronomy and Astrophysics, University of California at Santa Cruz, USA}\\
 \noindent\href{mailto:lmc@physics.osu.edu}{Linda Carpenter} 
 \emph{Ohio State University, USA}\\
+\noindent\href{mailto:nuno.castro@cern.ch}{Nuno Filipe Castro} 
+\emph{LIP-Minho, Braga, and Departamento de F\'\i sica e Astronomia, Faculdade de Ci\^ encias da Universidade do Porto, Portugal}\\
 \noindent\href{mailto:john.paul.chou@cern.ch}{John Paul Chou} 
 \emph{Rutgers University, USA}\\
 \noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzalez} 
@@ -58,10 +64,14 @@
 \emph{Lund University, Sweden}\\
 \noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
 \emph{CERN, Switzerland}\\
+\noindent\href{mailto:erbacher@physics.ucdavis.edu}{Robin Erbacher} 
+\emph{University of California, Davis, USA}\\
 \noindent\href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann} 
 \emph{Institut f\"ur Experimentelle Physik IV, Technische Universit\"at Dortmund, Germany}\\
 \noindent\href{mailto:cfischer@ifae.es}{Cora Fischer} 
 \emph{IFAE Barcelona, Spain}\\
+\noindent\href{mailto:Henning.Flacher@cern.ch}{Henning Flaecher} 
+\emph{H.H. Wills Physics Laboratory, University of Bristol, UK}\\
 \noindent\href{mailto:pjfox@fnal.gov}{Patrick J. Fox} 
 \emph{Fermilab, USA}\\
 \noindent\href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks} 
@@ -79,7 +89,7 @@
 \noindent\href{mailto:kristian.hahn@cern.ch}{Kristian Hahn} 
 \emph{Northwestern University, USA}\\
 \noindent\href{mailto:ulrich.haisch@physics.ox.ac.uk}{Ulrich Haisch} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom}\\
 \noindent\href{mailto:philip.coleman.harris@cern.ch}{Philip C. Harris} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:Kerstin.Hoepfner@cern.ch}{Kerstin Hoepfner} 
@@ -133,7 +143,7 @@
 \noindent\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer} 
 \emph{IPPP Durham, United Kingdom}\\
 \noindent\href{mailto:kentarou.mawatari@vub.ac.be}{Kentarou Mawatari} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Theoretische Natuurkunde and IIHE/ELEM, Vrije Universiteit Brussel, and International Solvay Institutes, Belgium}\\
 \noindent\href{mailto:c.mccabe@uva.nl}{Christopher McCabe} 
 \emph{GRAPPA, University of Amsterdam, Netherlands}\\
 \noindent\href{mailto:megy.theo@gmail.com}{Th\'eo Megy} 
@@ -153,7 +163,7 @@
 \noindent\href{mailto:Priscilla.Pani@cern.ch}{Priscilla Pani} 
 \emph{Stockholm University, Sweden}\\
 \noindent\href{mailto:mpapucci@lbl.gov}{Michele Papucci} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Theoretical Physics Group, Lawrence Berkeley National Laboratory, and Berkeley Center for Theoretical Physics, University of California, Berkeley, USA}\\
 \noindent\href{mailto:paulini@heps.phys.cmu.edu}{Manfred Paulini} 
 \emph{Carnegie Mellon University, USA}\\
 \noindent\href{mailto:Jacopo.Pazzini@pd.infn.it}{Jacopo Pazzini} 
@@ -178,8 +188,8 @@
 \emph{Max-Planck-Institut für Physik, Germany}\\
 \noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
 \emph{Nikhef and GRAPPA, The Netherlands}\\
-\noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturo Sanchez Pineda} 
+\emph{INFN Sezione di Napoli, and Dipartimento di Fisica, Universit\`a di Napoli, Italy}\\
 \noindent\href{mailto:s.sarkar1@physics.ox.ac.uk}{Subir Sarkar} 
 \emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom, and Niels Bohr Institute, Copenhagen, Denmark}\\
 \noindent\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt} 
@@ -210,8 +220,8 @@
 \emph{Theory division, CERN, Switzerland }\\
 \noindent\href{mailto:Fuquan.Wang@cern.ch}{Fuquan Wang} 
 \emph{University of Wisconsin-Madison, USA}\\
-\noindent\href{mailto:liantaow@uchicago.edu}{LianTao Wang} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:liantaow@uchicago.edu}{Lian-Tao Wang} 
+\emph{Enrico Fermi Institute and Department of Physics and Kavli Institute for Cosmological Physics, University of Chicago, USA}\\
 \noindent\href{mailto:renjie.wang@cern.ch}{Ren-Jie Wang} 
 \emph{Department of Physics, Northeastern University, USA}\\
 \noindent\href{mailto:steven.worm@cern.ch}{Steve Worm} 
